# inflation_dashboard

./: .gitignore  .pre-commit-config.yaml  README.md  dash_app.Dockerfile  dash_cpi_app.Dockerfile  pyproject.toml  requirements.txt  streamlit_cpi_app.Dockerfile
inflation_dashboard/: __init__.py
inflation_dashboard/dash/: app.py  collect_data.py
inflation_dashboard/dash/src/: all_categories_tab.py  core_and_headline_tab.py  edu_tab.py  energy_tab.py  food_tab.py  housing_tab.py  medical_tab.py  overview_tab.py
inflation_dashboard/dash/src/utils/: prep_data.py
inflation_dashboard/streamlit/: CPI_All_Urban_Consumers.py  app.py
inflation_dashboard/streamlit/pages/: Personal_Consumption_Expenditures.py  Sticky_Price_Indexs.py
inflation_dashboard/utils/: pandas.py  plotly.py  state_abb.py
