[tool.poetry]
name = "inflation-dashboard"
version = "0.1.0"
description = "Dashboard of American Inflation Data"
authors = ["gw-moore <gwmoore.career@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "inflation_dashboard"}]

[tool.poetry.dependencies]
python = "^3.11,<4.0"
dash = "^2.9.2"
plotly = "^5.14.0"
dash-bootstrap-components = "^1.4.1"
rich = "^13.3.3"
pyfredapi = "^0.5.3"
ipython = "^8.12.0"
python-dotenv = "^1.0.0"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.260"
pre-commit = "^3.2.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E501"]